--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,75 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Global Cursor Styles */
+body {
+  cursor: none; /* Hide the default cursor */
+}
+
+.custom-cursor {
+  /* Define basic styles for your custom cursor */
+}
+
+/* Global Styles */
+.neon-text {
+  color: #fff; /* Cor do texto base */
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa,
+    0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+}
+
+/* Navigation Styles */
+.hamburger-button {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 100; /* Ensure it's above other content */
+  width: 40px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 5px;
+  background: none;
+  border: none;
+  transition: all 0.3s ease;
+}
+
+.hamburger-button span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #0fa; /* Neon color */
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.side-navigation {
+  /* Initial hidden state */
+  transform: translateX(100%); /* Hide off-screen */
+}
+/* Scroll Down Indicator */
+.scroll-down-indicator {
+  position: absolute;
+  bottom: 20px; /* Ajuste conforme necessário */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40px; /* Ajuste conforme necessário */
+  height: 40px; /* Ajuste conforme necessário */
+  border: 2px solid #fff; /* Exemplo de estilo */
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  animation: bounce 2s infinite; /* Exemplo de animação */
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% { transform: translateY(-20px); }
+  60% { transform: translateY(-10px); }
+}
