--- a/src/app/app.html
+++ b/src/app/app.html
@@ -329,6 +329,7 @@
     </div>
   </div>
 </main>
+<app-cabin></app-cabin>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
