--- a/src/app/conclusion/conclusion.component.html
+++ b/src/app/conclusion/conclusion.component.html
@@ -1,10 +1,10 @@
 <div class="contact-content container">
-  <h2 class="section-title" appRevealOnScroll>Entre em Contato</h2>
-  <p class="contact-text" appRevealOnScroll>
+  <h2 class="section-title">Entre em Contato</h2>
+  <p class="contact-text">
     Estou sempre em busca de novas oportunidades e desafios. Se você tem um projeto em mente,
     uma vaga interessante ou simplesmente quer trocar uma ideia, adoraria ouvir você.
   </p>
-  <a href="mailto:seu-email@exemplo.com" class="cta-button" appRevealOnScroll>
+  <a href="mailto:seu-email@exemplo.com" class="cta-button">
     Diga Olá
   </a>
 </div>
