Incrementando a fase 8 do planejamento - mexendo no HTML

--- a/src/app/cabin/cabin.component.html
+++ b/src/app/cabin/cabin.component.html
@@ -1,15 +1,16 @@
 <div class="about-content container">
-  <div class="about-text" appGsapReveal>
-    <h2 class="reveal">Sobre Mim</h2>
-    <p class="reveal">
-      Olá! Sou o Eddy, um desenvolvedor apaixonado por criar aplicações web intuitivas e performáticas. Com sólida experiência em Angular,
+  <div class="about-text">
+    <h2 class="sr-only">Sobre Mim</h2>
+    <p class="sr-only">
+      Olá! Sou o Eddy, um desenvolvedor apaixonado por criar aplicações web intuitivas e performáticas.</p>
+    <p class="sr-only"> Com sólida experiência em Angular,
       TypeScript e tecnologias front-end modernas,
       meu foco é transformar ideias complexas em soluções elegantes e funcionais.
     </p>
-    <p class="reveal">
+    <p class="sr-only">
       Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
     </p>
-    <ul class="skills-list reveal">
+    <ul class="skills-list">
       <li>Angular</li>
       <li>TypeScript</li>
       <li>Gsap</li>
@@ -18,8 +19,8 @@
       <li>Node.js</li>
     </ul>
   </div>
-  <div class="about-image reveal">
-    <div class="image-placeholder" appGsapReveal [y]="50" [duration]="1">
+  <div class="about-image">
+    <div class="image-placeholder">
       Sua foto aqui
     </div>
   </div>
