Gambiarra na animação do cabin component, mas funciona... Testando migrar a animação para o app component, se der errado, volte...

--- a/src/app/cabin/cabin.component.html
+++ b/src/app/cabin/cabin.component.html
@@ -10,6 +10,19 @@
     <p class="sr-only">
       Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
     </p>
+
+    <h2 aria-hidden="true" class="animated-title">Sobre Mim</h2>
+    <p aria-hidden="true" class="animated-text">
+      Olá! Sou o Eddy, um desenvolvedor apaixonado por criar aplicações web intuitivas e performáticas.</p>
+    <p aria-hidden="true" class="animated-text"> Com sólida experiência em Angular,
+      TypeScript e tecnologias front-end modernas,
+      meu foco é transformar ideias complexas em soluções elegantes e funcionais.
+    </p>
+    <p aria-hidden="true" class="animated-text">
+      Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
+    </p>
+
+
     <ul class="skills-list">
       <li>Angular</li>
       <li>TypeScript</li>
