Foto de perfil adicionada

--- a/src/app/cabin/cabin.component.html
+++ b/src/app/cabin/cabin.component.html
@@ -34,7 +34,7 @@
   </div>
   <div class="about-image">
     <div class="image-placeholder">
-      Sua foto aqui
+      <img src="img/perfil.jpg" alt="Eddy">
     </div>
   </div>
 </div>
