--- a/src/app/cabin/cabin.component.css
+++ b/src/app/cabin/cabin.component.css
@@ -56,7 +56,7 @@ p {
   max-width: 300px;
   height: 300px;
   background-color: var(--color-accent);
-  border-radius: 5px;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,8 +65,14 @@ p {
   margin: 0 auto;
 }
 
-/* --- Lógica da Animação de Scroll --- */
-/* Agora a logica ficou com a diretiva Gsap */
+.image-placeholder img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
 
 /* Responsividade */
