--- a/src/app/maintenance/maintenance.component.html
+++ b/src/app/maintenance/maintenance.component.html
@@ -3,32 +3,41 @@
   <div class="services-grid">
     <div class="service-card">
       <div class="service-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 16.5" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 16.5" />
         </svg>
       </div>
       <h3>Desenvolvimento Web</h3>
-      <p>Criação de aplicações web robustas, escaláveis e de alta performance utilizando as melhores práticas do mercado e o ecossistema Angular.</p>
+      <p>Criação de aplicações web robustas, escaláveis e de alta performance utilizando as melhores práticas do mercado
+        e o ecossistema Angular.</p>
     </div>
 
     <div class="service-card">
       <div class="service-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9.53 16.122a3 3 0 00-5.78 1.128 2.25 2.25 0 01-2.4 2.4-c.89.054-1.72-.21-2.4-2.4a3 3 0 00-5.78-1.128 2.25 2.25 0 01-2.4-2.4c-.054-.89.21-1.72 2.4-2.4a3 3 0 001.128-5.78 2.25 2.25 0 012.4-2.4c.89-.054 1.72.21 2.4 2.4a3 3 0 005.78 1.128 2.25 2.25 0 012.4 2.4c.054.89-.21 1.72-2.4 2.4a3 3 0 00-1.128 5.78z" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM18 15.75l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 18l-1.035.259a3.375 3.375 0 00-2.456 2.456L18 21.75l-.259-1.035a3.375 3.375 0 00-2.456-2.456L14.25 18l1.035-.259a3.375 3.375 0 002.456-2.456L18 15.75z" />
         </svg>
       </div>
       <h3>UI/UX Design</h3>
-      <p>Desenho de interfaces intuitivas e agradáveis, focadas na experiência do usuário, utilizando ferramentas como Figma e Adobe XD.</p>
+      <p>Desenho de interfaces intuitivas e agradáveis, focadas na experiência do usuário, utilizando ferramentas como
+        Figma e Adobe XD.</p>
     </div>
 
     <div class="service-card">
       <div class="service-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-           <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 006 3.75v16.5a2.25 2.25 0 002.25 2.25h7.5A2.25 2.25 0 0018 20.25V3.75a2.25 2.25 0 00-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M10.5 1.5H8.25A2.25 2.25 0 006 3.75v16.5a2.25 2.25 0 002.25 2.25h7.5A2.25 2.25 0 0018 20.25V3.75a2.25 2.25 0 00-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
         </svg>
       </div>
       <h3>Aplicações SPA</h3>
-      <p>Especialista na construção de Single Page Applications (SPAs) com Angular, proporcionando uma navegação fluida e instantânea para o usuário.</p>
+      <p>Especialista na construção de Single Page Applications (SPAs) com Angular, proporcionando uma navegação fluida
+        e instantânea para o usuário.</p>
     </div>
   </div>
 </div>
