Funcionalidade do blog implementada, animações de pinning retiradas (por enquanto)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,1 @@
-<app-header />
-<main>
-  <section id="hero">
-    <app-hero />
-  </section>
-  <section id="cabin">
-    <app-cabin />
-  </section>
-  <section id="maintenance">
-    <app-maintenance />
-  </section>
-  <section id="perception">
-    <app-perception />
-  </section>
-  <section id="conclusion">
-    <app-conclusion />
-  </section>
-</main>
-<app-footer/>
+<router-outlet></router-outlet>
