Configuração do blog completa, Hora de partir para uma nova implementação e de uma nova branch

--- a/src/app/blog/blog-post/blog-post.component.html
+++ b/src/app/blog/blog-post/blog-post.component.html
@@ -1,6 +1,6 @@
 <div class="post-container">
   <div *ngIf="isLoading; else content" class="loading-state">
-    <p>A carregar o artigo...</p>
+    <p>Carregando...</p>
   </div>
 
   <ng-template #content>
