Funcionalidade do teclado interativo 3D implementada, mas sem um visual adequado

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,4 +1,4 @@
-<canvas #backgroundCanvas class="background-canvas"></canvas>
+<canvas #webglCanvas class="background-canvas"></canvas>
 <div class="hero-content">
   <h1>Eduardo Barreto</h1>
   <h2>Desenvolvedor Front-End | Especialista Angular | UI/UX Enthusiast</h2>
