--- a/src/app/maintenance/maintenance.component.html
+++ b/src/app/maintenance/maintenance.component.html
@@ -1,7 +1,7 @@
-<div class="services-content container">
-  <h2 class="section-title">O Que Eu Faço</h2>
-  <div class="services-grid">
-    <div class="service-card">
+<div class="services-content container" #maintenanceSection>
+  <h2 class="section-title" #maintenanceTitle>O Que Eu Faço</h2>
+  <div class="services-grid" #servicesGrid>
+    <div class="service-card" #serviceCards>
       <div class="service-icon">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
           stroke="currentColor">
