--- a/src/app/cabin/cabin.component.html
+++ b/src/app/cabin/cabin.component.html
@@ -1,4 +1,4 @@
-<div class="about-content container">
+<div class="about-content container" #cabinSection>
   <div class="about-text">
     <h2 class="sr-only">Sobre Mim</h2>
     <p class="sr-only">
@@ -11,19 +11,20 @@
       Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
     </p>
 
-    <h2 aria-hidden="true" class="animated-title">Sobre Mim</h2>
-    <p aria-hidden="true" class="animated-text">
-      Olá! Sou o Eddy, um desenvolvedor apaixonado por criar aplicações web intuitivas e performáticas.</p>
-    <p aria-hidden="true" class="animated-text"> Com sólida experiência em Angular,
-      TypeScript e tecnologias front-end modernas,
-      meu foco é transformar ideias complexas em soluções elegantes e funcionais.
-    </p>
-    <p aria-hidden="true" class="animated-text">
-      Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
-    </p>
+    <h2 aria-hidden="true" class="animated-title" #cabinTitle>Sobre Mim</h2>
+    <div #cabinTexts>
+      <p aria-hidden="true" class="animated-text">
+        Olá! Sou o Eddy, um desenvolvedor apaixonado por criar aplicações web intuitivas e performáticas.</p>
+      <p aria-hidden="true" class="animated-text"> Com sólida experiência em Angular,
+        TypeScript e tecnologias front-end modernas,
+        meu foco é transformar ideias complexas em soluções elegantes e funcionais.
+      </p>
+      <p aria-hidden="true" class="animated-text">
+        Aqui estão algumas das tecnologias com as quais tenho trabalhado recentemente:
+      </p>
+    </div>
 
-
-    <ul class="skills-list">
+    <ul class="skills-list" #skillsList>
       <li>Angular</li>
       <li>TypeScript</li>
       <li>Gsap</li>
@@ -32,7 +33,7 @@
       <li>Node.js</li>
     </ul>
   </div>
-  <div class="about-image">
+  <div class="about-image" #aboutImage>
     <div class="image-placeholder">
       <img src="img/perfil.jpg" alt="Eddy">
     </div>
