--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,6 +1,8 @@
-<canvas #webglCanvas class="background-canvas"></canvas>
-<div class="hero-content">
-  <h1>Eduardo Barreto</h1>
-  <h2>Desenvolvedor Front-End | Especialista Angular | UI/UX Enthusiast</h2>
-  <a href="#conclusion" class="cta-button">Vamos Conversar</a>
+<div class="hero-section" #heroSection>
+  <canvas #webglCanvas class="background-canvas" style="display: none;"></canvas>
+  <div #heroTitle class="hero-title-central">
+    <h1 #heroName>Eduardo Barreto</h1>
+    <h2 #heroSubtitle>Desenvolvedor Front-End | Especialista Angular | UI/UX Enthusiast</h2>
+    <a href="#conclusion" class="cta-button" #ctaButton>Vamos Conversar</a>
+  </div>
 </div>
