--- a/src/app/cabin/cabin.component.css
+++ b/src/app/cabin/cabin.component.css
@@ -6,7 +6,7 @@
 }
 
 .about-content {
-  display: grid;
+  display: flex;
   grid-template-columns: 3fr 2fr;
   gap: 30px;
   align-items: center;
@@ -25,31 +25,6 @@ p {
   margin-bottom: 15px;
 }
 
-.skills-list {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(140px, 200px));
-  gap: 10px;
-  padding: 0;
-  margin: 20px 0 0;
-  list-style: none;
-  margin-bottom: 20px;
-
-}
-
-.skills-list li {
-  position: relative;
-  padding-left: 20px;
-  font-family: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
-  font-size: 0.9rem;
-  margin-bottom: 10px;
-}
-
-.skills-list li::before {
-  content: '▹';
-  position: absolute;
-  left: 0;
-  color: var(--color-accent);
-}
 
 .image-placeholder {
   width: 100%;
@@ -59,7 +34,7 @@ p {
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   color: var(--color-primary);
   font-weight: bold;
   margin: 0 auto;
